deploy on github pages

--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+        const tg = window.Telegram.WebApp()
+
+        const body = document.querySelector('body');
+        const div = document.createElement('div');
+        div.innerHTML = tg.initData;
+        body.appendChild(div);
+
+    </script>
+
+
+
 </head>
 <body>
-1233454
+
 </body>
 </html>
