deploy on github pages

--- a/index.html
+++ b/index.html
@@ -5,20 +5,8 @@
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script>
-        const tg = window.Telegram.WebApp()
-
-        const body = document.querySelector('body');
-        const div = document.createElement('div');
-        div.innerHTML = tg.initData;
-        body.appendChild(div);
-
-    </script>
-
-
-
 </head>
 <body>
-
+<div class="empty"></div>
 </body>
 </html>
