--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="main.js"></script>
 </head>
 <body>
 <div class="empty"></div>
