--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-<div id="init"></div>
+<div id="init">123 </div>
 <script src="main.js"></script>
 </body>
 </html>
