--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-<div id="init">123 </div>
+    
+<header>
+    <div class="title">Jast WebApp</div>
+    <div class="menu-btn">
+        <div class="place">
+            <div class="line">.</div>
+            <div class="line">.</div>
+        </div>
+    </div>
+</header>
+<ul class="menu">
+    <li>Profile</li>
+    <li>Stats</li>
+</ul>
+
+
+
+<script src="functions.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
